// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JoinGroup Component should match snapshot 1`] = `
<div
  className="pro_ff"
>
  <Link
    className="pri_btn ff"
    to="/edit-group"
  >
    Edit group
  </Link>
</div>
`;

exports[`JoinGroup Component should match snapshot and show <Join/> when joined == false 1`] = `
<div
  className="pro_ff"
>
  <a
    className="pri_btn follow"
    href="#"
    onClick={[Function]}
  >
    Join group
  </a>
</div>
`;

exports[`JoinGroup Component should match snapshot and show <Leave/> when joined == true 1`] = `
<div
  className="pro_ff"
>
  <a
    className="pri_btn unfollow"
    href="#"
    onClick={[Function]}
  >
    Leave group
  </a>
</div>
`;
